styles.css
/* General theme overwrites */
.gatsby-resp-image-wrapper {
  box-shadow: none !important;
  border: 1px solid #ccc;
  margin-bottom: 2rem !important;
}

.image-author {
  font-size: 0.85em;
  color: var(--theme-ui-colors-secondary, #5f6c80);
  margin-bottom: 30px;
}

.text-center {
  text-align: center;
}

hr {
  margin: 32px 0 0 0 !important;
}

/* Post meta */
.post-meta {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.post-meta-share {
  display: flex;
  align-items: center;
}

.post-meta-share > div {
  margin-left: 5px;
  margin-right: 5px;
}

.post-meta-share > div:first-child {
  margin-left: 0;
}

.post-meta-share-icons {
  display: flex;
  align-items: center;
  margin-top: 16px;
}

.post-meta-separator {
  margin-right: 5px;
}

.post-meta-share-icons button {
  display: flex;
  align-items: center;
  margin-right: 10px;
  transition: all 0.2s ease-out;
}

.post-meta-share-icons svg {
  color: var(--theme-ui-colors-secondary, #5f6c80);
}

.post-meta-share-icons button:hover {
  transform: scale(1.15);
}

.post-meta-share-icons button:focus {
  outline: 0;
}

.post-meta-share-icons button:last-child {
  margin-right: 0;
}

/* Subscribe Form */
.revue-embed-form {
  display: flex;
  align-items: flex-end;
}

@media only screen and (max-width: 425px) {
  .revue-embed-form {
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 10px;
  }

  .revue-embed-form > div {
    margin-bottom: 10px;
  }
}

.revue-form-group {
  display: flex;
  width: 200px;
  flex-direction: column;
  margin-right: 20px;
}

.revue-form-group .revue-form-field {
  width: 200px;
  height: 40px;
  padding: 0 8px;
  border: 1px solid var(--theme-ui-colors-divide, #cbd5e0);
  border-radius: 5px;
}

.revue-form-actions .revue-form-submit {
  -webkit-appearance: none;
  cursor: pointer;
  height: 40px;
  border: 1px solid transparent;
  border-radius: 5px;
  color: var(--theme-ui-colors-heading, #fff);
  padding: 8px 16px;
  background-color: var(--theme-ui-colors-primary, #6b46c1);
  transition: background-color 0.2s ease-out;
}

.revue-form-actions .revue-form-submit:hover {
  background-color: #55359f;
}

